# constexpr_all_the_things

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
presentation/: ben_notes.org  jason_notes.md  jason_notes.org  presentation-inksaver.css  presentation.css  presentation.html  presentation.js  presentation.org  submission.org
src/include/: cx_algorithm.h  cx_iterator.h  cx_json_parser.h  cx_json_value.h  cx_map.h  cx_optional.h  cx_pair.h  cx_parser.h  cx_string.h  cx_vector.h
src/include/algorithms/: cx_mod_seq.h  cx_nonmod_seq.h
src/test/: CMakeLists.txt  algorithm.cpp  json.cpp  main.cpp
